--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,6 +1,6 @@
-<%= simple_form_for @book do |b| %>
-	<%= b.input :title %>
-	<%= b.input :description %>
-	<%= b.input :author %>
-	<%= b.button :submit %>
+<%= simple_form_for @book do |f| %>
+	<%= f.input :title, label: "Book Title" %>
+	<%= f.input :description %>
+	<%= f.input :author %>
+	<%= f.button :submit %>
 <% end %>
